<resources>
    <string name="app_name">SalvageMod settings</string>
    <string name="interface_settings_title_head">User interface</string>
    <string name="interface_settings_title_subhead">Interface settings</string>
    <string name="interface_settings_summary_head">Notification widgets, overscrolling</string>
    <string name="system_settings_title_head">Mod information</string>
    <string name="system_settings_title_subhead">Mod information</string>
    <string name="system_settings_summary_head">Changelog</string>
    <string name="performance_settings_title_head">Performance settings</string>
    <string name="performance_settings_summary_head">Adjust CPU settings</string>
    <string name="term_emu_title">Terminal emulator</string>
    <string name="term_emu_sum">A terminal emulator for Android</string>
    <string name="ui_title">User interface</string>
    <string name="ui_summary">User interface settings &amp; tweaks</string>
    <string name="ui_statusbar_title">Status bar settings</string>
    <string name="ui_overscroll_title">Overscrolling</string>
    <string name="pref_overscroll_title">Overscroll effect</string>
    <string name="pref_overscroll_summary">Choose how scrollable objects look when they overshoot</string>
    <string name="pref_overscroll_weight_title">Overscrolling weight</string>
    <string name="pref_overscroll_weight_summary">Select the weight of the scrollable objects</string>
    <string name="pref_electron_beam_title">Screen On/Off Animation</string>
    <string name="pref_electron_beam_animation_on">Screen-on animation</string>
    <string name="pref_electron_beam_animation_off">Screen-off animation</string>
    <string name="performance_cpu_title">CPU Settings</string>
    <string name="pref_dialogtitle_cpu_settings">CPU Settings</string>
    <string name="pref_dialogsummary_cpu_settings">Adjust the CPU settings like: Governors &amp; Min/Max Frequency</string>
    <string name="ui_heapsize_title">VM Heap Settings</string>
    <string name="pref_heapsize_title">VM heap size</string>
    <string name="pref_heapsize_summary">Maximum amount of memory per VM heap (requires reboot)</string>
    <string name="title_widget_buttons">Expanded View Widget</string>
    <string name="title_expanded_widget">Notification widgets</string>
    <string name="expanded_widget_summary">Enable and modify notification bar toggles</string>
    <string name="summary_expanded_widget">Use the expanded views power widget</string>
    <string name="title_expanded_hide_onchange">Hide on change</string>
    <string name="summary_expanded_hide_onchange">Hide the notification pulldown after toggling a widget button</string>
    <string name="expanded_color_mask">Indicator color</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">Pick your widget buttons</string>
    <string name="title_widget_order">Widget button order</string>
    <string name="summary_widget_order">Order your widget buttons</string>
    <string name="title_buttons">Buttons</string>
    <string name="title_toggle_wifi">Toggle Wifi</string>
    <string name="title_toggle_bluetooth">Toggle Bluetooth</string>
    <string name="title_toggle_gps">Toggle GPS</string>
    <string name="title_toggle_sound">Toggle Sound</string>
    <string name="title_toggle_brightness">Toggle Brightness</string>
    <string name="title_toggle_sync">Toggle Sync</string>
    <string name="title_toggle_wifiap">Toggle Wifi AP</string>
    <string name="title_toggle_screentimeout">Toggle Screentimeout</string>
    <string name="title_toggle_mobiledata">Toggle Mobiledata</string>
    <string name="title_toggle_lockscreen">Toggle Lockscreen</string>
    <string name="title_toggle_networkmode">Toggle 2G/3G</string>
    <string name="title_toggle_autorotate">Toggle Orientation</string>
    <string name="title_toggle_airplane">Toggle Airplane mode</string>
    <string name="title_toggle_flashlight">Toggle LED flashlight</string>
    <string name="title_toggle_sleep">Go to sleep</string>
    <string name="title_toggle_media_play_pause">Media: Toggle Play/Pause</string>
    <string name="title_toggle_media_previous">Media: Skip to Previous</string>
    <string name="title_toggle_media_next">Media: Skip to Next</string>
    <string name="title_toggle_wimax">Toggle WiMAX</string>
    <string name="title_button_modes">Button modes</string>
    <string name="pref_brightness_mode_title">Brightness modes</string>
    <string name="pref_brightness_mode_summary">Choose how the brightness button changes modes</string>
    <string name="pref_network_mode_title">Network modes</string>
    <string name="pref_network_mode_summary">Choose how the NetworkMode button changes modes</string>
    <string name="pref_screentimeout_mode_title">Screentimeout modes</string>
    <string name="pref_screentimeout_mode_summary">Choose how the Screentimeout button changes modes</string>
    <string name="pref_ring_mode_title">Sound modes</string>
    <string name="pref_ring_mode_summary">Choose how the sound button changes modes</string>
    <string name="pref_flash_mode_title">Flash mode</string>
    <string name="pref_flash_mode_summary">Choose High / Death Ray(Evo)</string>
    <string name="widget_max_buttons">6 is the max amount of buttons.</string>
    <string name="general_title">General</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="msg_color_picker">Tap on center color to confirm.\nPress back to cancel</string>
    <string name="device_hostname">Device hostname</string>
    <string name="hostname_save">Save</string>
    <string name="hostname_cancel">Cancel</string>
    <string name="changelog_title">View changelog</string>
    <string name="changelog_dialog">Changelog</string>
    <string name="changelog_loading">Loading changelog...</string>
    <string name="changelog_error">Error loading changelog...</string>
    <string name="changelog_unknown">Unknown</string>
    <string name="changelog_version">Version</string>
    <string name="nightly_title">SalvageMod Nightly</string>
    <string name="nightly_disclaimer">You are running what is considered to be an unstable nightly build of SalvageMod. There may be bugs! Please dont report bugs for these builds.</string>
    <string name="mod_info_main">About ROM</string>
    <string name="mod_info_header">Mod information</string>
    <string name="build_info_category">Build information</string>
    <string name="device_info_category">Device information</string>
    <string name="cpu_settings_title">Performance settings</string>
    <string name="cpu_title">Performance settings</string>
    <string name="cpu_summary">Governor and clock settings</string>
    <string name="cpu_governors_title">CPU governors</string>
    <string name="cpu_governors_summary">List of available governors\nCurrently selected: %S</string>
    <string name="cpu_min_freq_title">Min CPU frequency</string>
    <string name="cpu_min_freq_summary">Minimum CPU frequency\nCurrently: %s</string>
    <string name="cpu_max_freq_title">Max CPU frequency</string>
    <string name="cpu_max_freq_summary">Maximum CPU frequency\nCurrently: %s</string>
    <string name="cpu_set_on_boot">Set on boot</string>
    <string name="cpu_set_on_boot_summary">Restore CPU settings on boot</string>
    <string name="lockscreen_settings_title_head">Lockscreen</string>
    <string name="pref_lockscreen_delay_title">Delay</string>
    <string name="pref_lockscreen_timeout_lock_delay">Screen timeout delay</string>
    <string name="pref_lockscreen_screenoff_lock_delay">Screen turned off delay</string>
    <string name="pref_lockscreen_timeout_lock_delay_summary">How long to delay before enabling screen lock when screen times out</string>
    <string name="pref_lockscreen_screenoff_lock_delay_summary">How long to delay before enabling screen lock when screen is turned off</string>
    <string name="pref_lockscreen_stylecfg_title">Style options</string>
    <string name="pref_lockscreen_stylecfg_summary">Configure the lockscreen style and the corresponding settings</string>
    <string name="pref_lockscreen_widgets_title">Widget options</string>
    <string name="pref_lockscreen_widgets_summary">Enable or disable various widgets on the lockscreen</string>
    <string name="pref_lockscreen_always_battery_title">Always display battery status</string>
    <string name="pref_lockscreen_always_battery_summary">Display battery status on the lockscreen at all times</string>
    <string name="pref_lockscreen_music_controls_title">Lockscreen music controls</string>
    <string name="pref_lockscreen_music_controls_summary">Displays music controls on the lockscreen</string>
    <string name="pref_lockscreen_now_playing_title">Display song name</string>
    <string name="pref_lockscreen_now_playing_summary">Display the name and artist of the song currently playing</string>
    <string name="pref_lockscreen_album_art_title">Display album art</string>
    <string name="pref_lockscreen_album_art_summary">Display the album art of the current song. Only works with stock music player in portrait mode</string>
    <string name="pref_lockscreen_music_headset_title">Display music controls with headset</string>
    <string name="pref_lockscreen_music_headset_summary">Display music controls when a wired headset and/or Bluetooth A2DP headset is connected</string>
    <string name="pref_lockscreen_always_music_controls_title">Always display music controls</string>
    <string name="pref_lockscreen_always_music_controls_summary">Display music controls regardless of whether or not music is playing</string>
    <string name="pref_menu_unlock_title">Menu unlock</string>
    <string name="pref_menu_unlock_summary">Pressing the menu button unlocks the device</string>
    <string name="pref_lockscreen_quick_unlock_control_title">Quick Unlock</string>
    <string name="pref_lockscreen_quick_unlock_control_summary">No need to press OK when entering Pin or Password. Delete counts as bad try</string>
    <string name="pref_lockscreen_custom_app_toggle_title">Custom app starter</string>
    <string name="pref_lockscreen_custom_app_toggle_summary">Shows a second slider on sliding style, shows a custom app dimple on rotary style</string>
    <string name="pref_lockscreen_custom_app_activity_title">Custom application</string>
    <string name="pref_lockscreen_custom_icon_style_title">Message icon for custom app</string>
    <string name="pref_lockscreen_custom_icon_style_summary">Uses message icon instead of cm icon for custom app starter</string>
    <string name="pref_lockscreen_rotary_unlock_down_title">Drag down to unlock</string>
    <string name="pref_lockscreen_rotary_unlock_down_summary">Dragging down rotary wheel unlocks. Dragging right starts custom app</string>
    <string name="pref_lockscreen_rotary_hide_arrows_title">Hide rotary arrows</string>
    <string name="pref_lockscreen_rotary_hide_arrows_summary">Hides the directional hint arrows on rotary style</string>
    <string name="pref_lockscreen_style_title">Lockscreen style</string>
    <string name="pref_lockscreen_style_summary">Choose the style of the lockscreen</string>
    <string name="lockscreen_widgets_note_title">Note</string>
    <string name="lockscreen_widgets_note_summary">Choosing minimalistic lense style hides all widgets except music control. Yet below options are not unset to allow easy switching to other styles</string>
    <string name="pref_lockscreen_disable_unlock_tab">Disable unlock slider</string>
    <string name="pref_lockscreen_disable_unlock_tab_summary">Note: You need to enable trackball, menu key, or gesture unlocking before this option becomes available</string>
    <string name="pref_trackball_unlock_title">Trackball unlock</string>
    <string name="pref_trackball_unlock_summary">Pressing the trackball unlocks the device</string>
</resources>