<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_title"
        android:key="pref_category_unlock_settings">

        <CheckBoxPreference android:key="pref_trackball_unlock"
            android:title="@string/pref_trackball_unlock_title"
            android:summary="@string/pref_trackball_unlock_summary" />

        <CheckBoxPreference android:key="pref_menu_unlock"
            android:title="@string/pref_menu_unlock_title"
            android:summary="@string/pref_menu_unlock_summary" />

        <CheckBoxPreference android:key="lockscreen_quick_unlock_control"
            android:title="@string/pref_lockscreen_quick_unlock_control_title"
            android:summary="@string/pref_lockscreen_quick_unlock_control_summary" />

        <CheckBoxPreference android:key="lockscreen_disable_unlock_tab"
            android:title="@string/pref_lockscreen_disable_unlock_tab"
            android:summary="@string/pref_lockscreen_disable_unlock_tab_summary" />

    </PreferenceCategory>

</PreferenceScreen>
