<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!-- CPU Settings  -->
<PreferenceCategory android:title="@string/performance_cpu_title">
	<PreferenceScreen android:title="@string/pref_dialogtitle_cpu_settings"
		android:summary="@string/pref_dialogsummary_cpu_settings">
		<PreferenceCategory android:title="@string/performance_cpu_title">
 			 <ListPreference android:key="pref_cpu_gov" 
				android:dialogTitle="@string/cpu_governors_title"
				android:title="@string/cpu_governors_title" />
 			 <ListPreference android:key="pref_freq_min" 
				android:dialogTitle="@string/cpu_min_freq_title"
      			 	android:title="@string/cpu_min_freq_title" 
				android:summary="Minimum CPU frequency" />
			  <ListPreference android:key="pref_freq_max" 
				android:dialogTitle="@string/cpu_max_freq_title"
   			  	android:title="@string/cpu_max_freq_title" 
				android:summary="Maximum CPU frequency" />
			  <CheckBoxPreference 
				android:key="pref_set_on_boot"
     				android:title="@string/cpu_set_on_boot" 
				android:summary="@string/cpu_set_on_boot_summary"/>
		</PreferenceCategory>
	</PreferenceScreen>
</PreferenceCategory>

<!-- VM Heap Settings  -->
<PreferenceCategory android:title="@string/ui_heapsize_title">
	<ListPreference android:key="pref_heapsize"
		android:dialogTitle="@string/pref_heapsize_title"
		android:title="@string/pref_heapsize_title" 
		android:summary="@string/pref_heapsize_summary"
		android:entries="@array/entries_heapsize"
		android:entryValues="@array/entries_heapsize" />
</PreferenceCategory>

</PreferenceScreen>
