<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_title">

        <ListPreference android:key="pref_lockscreen_style"
            android:dialogTitle="@string/pref_lockscreen_style_title"
            android:title="@string/pref_lockscreen_style_title"
            android:summary="@string/pref_lockscreen_style_summary"
            android:entries="@array/pref_lockscreen_style_entries"
            android:entryValues="@array/pref_lockscreen_style_values" />

        <CheckBoxPreference android:key="pref_lockscreen_custom_app_toggle"
            android:title="@string/pref_lockscreen_custom_app_toggle_title"
            android:summary="@string/pref_lockscreen_custom_app_toggle_summary" />

        <CheckBoxPreference android:key="pref_lockscreen_rotary_unlock_down_toggle"
            android:title="@string/pref_lockscreen_rotary_unlock_down_title"
            android:summary="@string/pref_lockscreen_rotary_unlock_down_summary" />

        <CheckBoxPreference android:key="pref_lockscreen_rotary_hide_arrows_toggle"
            android:title="@string/pref_lockscreen_rotary_hide_arrows_title"
            android:summary="@string/pref_lockscreen_rotary_hide_arrows_summary" />

        // currently a toggle/checkbox but may be expanded if more icons are added
        <CheckBoxPreference android:key="pref_lockscreen_custom_icon_style"
            android:title="@string/pref_lockscreen_custom_icon_style_title"
            android:summary="@string/pref_lockscreen_custom_icon_style_summary" 
            android:dependency="pref_lockscreen_custom_app_toggle" />

        <Preference android:key="pref_lockscreen_custom_app_activity"
            android:dependency="pref_lockscreen_custom_app_toggle"
            android:title="@string/pref_lockscreen_custom_app_activity_title" />

    </PreferenceCategory>

</PreferenceScreen>
