<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_title">

        <ListPreference android:key="pref_lockscreen_timeout_delay"
            android:dialogTitle="@string/pref_lockscreen_delay_title"
            android:title="@string/pref_lockscreen_timeout_lock_delay"
            android:summary="@string/pref_lockscreen_timeout_lock_delay_summary"
            android:entries="@array/pref_lockscreen_delay_entries"
            android:entryValues="@array/pref_lockscreen_delay_values" />

        <ListPreference android:key="pref_lockscreen_screenoff_delay"
            android:dialogTitle="@string/pref_lockscreen_delay_title"
            android:title="@string/pref_lockscreen_screenoff_lock_delay"
            android:summary="@string/pref_lockscreen_screenoff_lock_delay_summary"
            android:entries="@array/pref_lockscreen_delay_entries"
            android:entryValues="@array/pref_lockscreen_delay_values" />

    </PreferenceCategory>

</PreferenceScreen>
