<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">

   <PreferenceScreen android:key="cpu_settings" android:title="@string/cpu_title" android:summary="@string/cpu_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.salvagemod.salvageparts"
                android:targetClass="com.salvagemod.salvageparts.activities.CPUActivity" />
        </PreferenceScreen>

        <!-- Change Log -->
        <PreferenceScreen android:key="changelog"
            android:title="@string/changelog_title">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.salvagemod.salvageparts"
                android:targetClass="com.salvagemod.salvageparts.activities.ChangeLog" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
